--- a/app/public/assets/frontend/css/login.css
+++ b/app/public/assets/frontend/css/login.css
@@ -10,7 +10,7 @@ body {
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 2px 4px 10px #3db576;
 }
 
 .login-heading {
@@ -39,7 +39,7 @@ body {
 .login-btn {
     width: 100%;
     padding: 10px;
-    background-color: #007bff;
+    background-color: #3db576;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -47,5 +47,5 @@ body {
 }
 
 .login-btn:hover {
-    background-color: #0056b3;
+    background-color: #44c783;
 }
